Tweaked the background to work well on mobile, improved the reveal effect on load, fixed a bug with mobile navigation.

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,11 +30,12 @@ body {
 	color: var(--text);
 	
 	background:
-	radial-gradient(circle at top, rgba(var(--primary-rgb), 0.1) 0%, transparent 80%),
+	radial-gradient(circle at top, rgba(var(--primary-rgb), 0.14) 0%, transparent 80%),
 	radial-gradient(circle at bottom, rgba(var(--secondary-rgb), 0.1) 0%, transparent 80%),
 	radial-gradient(circle, var(--background) 0%, var(--background) 100%);
 	
-	background-size: 180% 100%;
+	background-size: 180vw 100vh;
+	background-attachment: fixed;
 
 	animation: gradient 9s ease infinite;
 }
@@ -59,18 +60,39 @@ h2 {
 	border-right: 1px solid rgba(var(--primary-rgb), 0.2);
 }
 
+@keyframes scale-up {
+	0% {
+		transform: scaleY(0);
+	}
+	100% {
+		transform: scaleY(1);
+	}
+}
+@keyframes scale-down {
+	0% {
+		transform: scaleY(1);
+	}
+	100% {
+		transform: scaleY(0);
+		display: none;
+	}
+}
 
 #mobile-nav .mobile-nav-buttons {
-	transform: scaleY(0);
 	transform-origin: top;
-	transition: transform 0.3s ease-in;
 	background-color: rgba(var(--background-rgb), 0.8);
 	border-bottom: 2px solid rgba(var(--primary-rgb), 0.5);
+	transform: scaleY(0);
 }
 #mobile-nav.open .mobile-nav-buttons {
-	transform: scaleY(1);
-	transition: transform 0.3s ease-out;
+	animation: scale-up 0.3s ease-in;
+	animation-fill-mode: both;
 }
+#mobile-nav.closed .mobile-nav-buttons {
+	animation: scale-down 0.3s ease-out;
+	animation-fill-mode: both;
+}
+
 #mobile-nav {
 	position: fixed;
 	top: 0;
